[project]
name = "loan-underwriting-env"
version = "1.0.0"
description = "A real-world OpenEnv environment for loan underwriting decisions"
authors = [
    {name = "bhattyuvraj22", email = "bhatt.yuvraj22@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.9.2",
    "openai>=1.40.0",
    "requests>=2.31.0",
    "openenv-core>=0.2.0"
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project.scripts]
server = "main:main"